accepted for ICCV!

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div></td>
 	</tr>
 	<tr>
-		<td valign="top" rowspan="2" width="35%">
+		<td valign="top" width="35%">
 		<!-- MSCellType="ContentBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Welcome to my homepage! </font></p>
@@ -29,8 +29,9 @@
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Take the time and make it count. </font></p>
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><em><font color="#8080FF">Once more, on the ride of the azure skyline;</font></em></font></p>
-	  <p align="left" style="text-indent: 40px"><font color="#8080FF"><em><font face="Georgia, Times New Roman, Times, serif"> Once more, through the everlasting sunshine. </font></em></font></p></td>
-		<td width="39%" height="458" valign="top">
+	  <p align="left" style="text-indent: 40px"><font color="#8080FF"><em><font face="Georgia, Times New Roman, Times, serif"> Once more, through the everlasting sunshine. </font></em></font></p>
+	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
+		<td width="39%" valign="top">
 		<p style="text-indent: 40px">&nbsp;</p>
 		<p style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Education</font></i> <font face="Georgia, Times New Roman, Times, serif"><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a> </font></p>
 		<p style="text-indent: 40px">&nbsp;</p>
@@ -51,29 +52,32 @@
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Research Interest</font></i></p>
 		<p align="left" style="text-indent: 40px">
   <font face="Georgia, Times New Roman, Times, serif">I am always interested to do research in 
-interdisciplinary fields in computer science, especially associated with mathematics. Now my research interest spans  the fields of<font color="#0000C0"> Computational Geometry/Topology, Computer Vision, Graphics, Robotics, Theoretical Machine Learning and Statistics. </font></font></p>
+interdisciplinary fields of computer science, especially associated with mathematics. Now my research interest spans  the fields of<font color="#0000C0"> Computational Geometry/Topology, Computer Vision, Graphics, Robotics, Theoretical Machine Learning and Statistics. </font></font></p>
 	  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Additionally, I have an amateur interest in <font color="#8080FF">Cryptography</font>, especially <font color="#8080FF">Asymmetric Encryption</font>. Although I do not expect to do research in this area, I feel it  very enchanting. I will be pleased if you would like to discuss about relevant topics with me. </font></p>
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
-	  <td width="39%" valign="top">
+	  <td valign="top" width="35%"><p>&nbsp;</p>
+	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Contacts</font></i></p>
+	    <p align="left" style="text-indent: 40px">&nbsp;</p>
+	    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">i [at] w.wiku30.xyz</font> <font face="Georgia, Times New Roman, Times, serif">(guaranteed valid through &gt;2023/10)</font></p>
+        <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">zzs15 [at] mails.tsinghua.edu.cn (expires in 2020/06) </font></p>
+        <p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif"><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font> <font face="Georgia, Times New Roman, Times, serif">(permanent)</font></p>
+        <p align="left" style="text-indent: 40px"><font color="#8080FF" face="Georgia, Times New Roman, Times, serif"><a href="https://www.facebook.com/zishuo.zhao.528"><font color="#8080FF">https://www.facebook.com/zishuo.zhao.528</font></a></font></p>
+        <p align="left" style="text-indent: 40px">&nbsp;</p>
+        <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">ORCID: <font color="#8080FF"><a href="https://orcid.org/0000-0003-4247-7272"><font color=#0000D0>0000-0003-4247-7272</font></a></font></font></p>      </td>
+	  <td colspan="2" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Academic Work</font></i></p>
+	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Publications &amp; Manuscripts </font></i></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-    <p align="left" style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Bachelor Thesis</font></p>
-    <p align="left" style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif"><em>Scene Analysis and Reconstruction based on Geometric Distance</em></font><font face="Georgia, Times New Roman, Times, serif"><em>s</em></font><em></em></p>
-    <p align="left" style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Supervisor: Prof. Shi-Min Hu </font></p>
-    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Graded: <font color="#0000c0">A(4.0/95+) </font></font></p>
-    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Manuscript: <a href="https://arxiv.org/abs/1907.06441"><font color="#8080FF">arXiv:1907.06441</font></a></font></p></td>
-		<td  valign="top" width="26%">
-		<p align="left" style="text-indent: 40px">&nbsp;</p>
-		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Contacts:</font></i></p>
-		<p align="left" style="text-indent: 40px"><font size="-1" face="Georgia, Times New Roman, Times, serif">i [at] w.wiku30.xyz</font> <font size="-1" face="Georgia, Times New Roman, Times, serif">(guaranteed valid through &gt;2023/10)</font></p>
-		<p align="left" style="text-indent: 40px"><font size="-1" face="Georgia, Times New Roman, Times, serif">zzs15 [at] mails.tsinghua.edu.cn (expires in 2020/06) </font></p>
-		<p align="left" style="text-indent: 40px"> <font size="-1" face="Georgia, Times New Roman, Times, serif"><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font> <font size="-1" face="Georgia, Times New Roman, Times, serif">(permanent)</font></p>
-		<p align="left" style="text-indent: 40px"><font color="#8080FF" size="-1" face="Georgia, Times New Roman, Times, serif"><a href="https://www.facebook.com/zishuo.zhao.528"><font color="#8080FF">https://www.facebook.com/zishuo.zhao.528</font></a></font></p>
-		<p align="left" style="text-indent: 40px">&nbsp;</p>
-	  <p align="left" style="text-indent: 40px">&nbsp;</p>		</td>
+	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><em>ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering and Motion Estimation</em></font></p>
+	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Jiahui Huang, Sheng Yang, Zishuo Zhao, Yukun Lai, Shi-Min Hu. </font></p>
+	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Accepted for <font color="#0000C0">ICCV 2019</font></font></p>
+	<p align="left" style="text-indent: 40px">&nbsp;</p>
+	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><em>Noise-Stable Rigid Graphs for Euclidean Embedding</em></font></p>
+	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Zishuo Zhao, Shi-Min Hu. </font></p>
+	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><a href="https://arxiv.org/abs/1907.06441"><font color="#8080FF">arXiv:1907.06441</font></a></font></p>
+	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
 		<td colspan="2" valign="top">
@@ -81,17 +85,20 @@ interdisciplinary fields in computer science, especially associated with mathema
 		<!-- MSCellType="ContentFoot" -->
 		<p style="margin-top: 0px; text-indent: 40px;"><i><font color="#0000FF" face="Consolas">Research Experience</font></i></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
-		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">The University of Texas at Austin</font></p>
-		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2018/04 - 2018/08</font></p>
-		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Research Intern, advised by Prof Qixing Huang and Prof Chandrajit Bajaj.</font></p>
-		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Tsinghua University</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2019/03 - 2019/06 </font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif"><a href="2019/Thesis.pdf"><font color="#000000">Bachelor Thesis</font></a>, advised by Prof Shi-Min Hu.</font></p>
+		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Graded: <font color="#0000c0">A(4.0/95+) </font></font></p>
+		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Tsinghua University, <a href="https://cg.cs.tsinghua.edu.cn/"><font color="#0000D0">CG Lab</font></a> </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2018/09 - 2019/03</font></p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Undergraduate Researcher, advised by Prof Shi-Min Hu. </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
-		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Tsinghua University</font></p>
-		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2019/03 - 2019/06 </font></p>
-		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Graduation Project, advised by Prof Shi-Min Hu.</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">The University of Texas at Austin</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2018/04 - 2018/08</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Research Intern, advised by Prof Qixing Huang and Prof Chandrajit Bajaj.</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
+		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competition Attended </font></i>
 		<p align="left" style="text-indent: 40px">
@@ -120,7 +127,7 @@ interdisciplinary fields in computer science, especially associated with mathema
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-07-18</font></i></p>
+<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-07-24</font></i></p>
 
 </body>
 
