--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Accepted for <font color="#0000C0">ICCV 2019</font></font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><em>Noise-Stable Rigid Graphs for Euclidean Embedding</em></font></p>
-	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Zishuo Zhao, Shi-Min Hu. </font></p>
+	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Zishuo Zhao. </font></p>
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><a href="https://arxiv.org/abs/1907.06441"><font color="#8080FF">arXiv:1907.06441</font></a></font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
@@ -84,6 +84,10 @@ interdisciplinary fields of computer science, especially associated with mathema
 <p align="left" style="text-indent: 40px">&nbsp;</p>
 		<!-- MSCellType="ContentFoot" -->
 		<p style="margin-top: 0px; text-indent: 40px;"><i><font color="#0000FF" face="Consolas">Research Experience</font></i></p>
+		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">University of California, Berkeley </font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2019/08 - present</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Undergraduate Researcher, advised by Prof Masayoshi Tomizuka.  </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Tsinghua University</font></p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2019/03 - 2019/06 </font></p>
@@ -127,7 +131,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-07-24</font></i></p>
+<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-08-15</font></i></p>
 
 </body>
 
