--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Publications &amp; Manuscripts </font></i></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><em>ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering and Motion Estimation</em></font></p>
+	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><em><a href="2019/5594.pdf">ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering and Motion Estimation</a></em></font></p>
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Jiahui Huang, Sheng Yang, Zishuo Zhao, Yukun Lai, Shi-Min Hu. </font></p>
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Accepted for <font color="#0000C0">ICCV 2019</font></font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
@@ -91,7 +91,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Tsinghua University</font></p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2019/03 - 2019/06 </font></p>
-		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif"><a href="2019/Thesis.pdf"><font color="#000000">Bachelor Thesis</font></a>, advised by Prof Shi-Min Hu.</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif"><a href="2019/Thesis.pdf"></a>Bachelor Thesis, advised by Prof Shi-Min Hu.</font></p>
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Graded: <font color="#0000c0">A(4.0/95+) </font></font></p>
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Tsinghua University, <a href="https://cg.cs.tsinghua.edu.cn/"><font color="#0000D0">CG Lab</font></a> </font></p>
@@ -131,7 +131,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-08-15</font></i></p>
+<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-09-11</font></i></p>
 
 </body>
 
