--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<p align="left" style="text-indent: 40px">
   <font face="Georgia, Times New Roman, Times, serif">I am always interested to do research in 
 interdisciplinary fields of computer science, especially associated with mathematics. Now my research interest spans  the fields of<font color="#0000C0"> Computational Geometry/Topology, Computer Vision, Graphics, Robotics, Theoretical Machine Learning and Statistics. </font></font></p>
-	  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Additionally, I have an amateur interest in <font color="#8080FF">Cryptography</font>, especially <font color="#8080FF">Asymmetric Encryption</font>. Although I do not expect to do research in this area, I feel it  very enchanting. I will be pleased if you would like to discuss about relevant topics with me. </font></p>
+	  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Additionally, I have amateur interests in <font color="#8080FF">Cryptography, Computer Music and Random Graph Theory</font>. Although I do not expect to do research in these areas, I feel them  very enchanting. I will be pleased if you would like to discuss about relevant topics with me. </font></p>
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
@@ -68,41 +68,47 @@ interdisciplinary fields of computer science, especially associated with mathema
         <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">ORCID: <font color="#8080FF"><a href="https://orcid.org/0000-0003-4247-7272"><font color=#0000D0>0000-0003-4247-7272</font></a></font></font></p>      </td>
 	  <td colspan="2" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Publications &amp; Manuscripts </font></i></p>
-	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><em><a href="2019/5594.pdf">ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering and Motion Estimation</a></em></font></p>
+	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Publications</font></i></p>
+	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><em>ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering and Motion Estimation</em></font></p>
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Jiahui Huang, Sheng Yang, Zishuo Zhao, Yukun Lai, Shi-Min Hu. </font></p>
-	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Accepted for <font color="#0000C0">ICCV 2019</font></font></p>
+	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Accepted for <font color="#0000C0">ICCV 2019. </font></font><font face="Georgia, Times New Roman, Times, serif"><a href="2019/5594.pdf"><font color="#8080FF">[Link] </font></a></font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
+	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Manuscripts In submission</font></i></p>
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><em>Noise-Stable Rigid Graphs for Euclidean Embedding</em></font></p>
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Zishuo Zhao. </font></p>
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><a href="https://arxiv.org/abs/1907.06441"><font color="#8080FF">arXiv:1907.06441</font></a></font></p>
-	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
+	</td>
 	</tr>
 	<tr>
 		<td colspan="2" valign="top">
 <p align="left" style="text-indent: 40px">&nbsp;</p>
 		<!-- MSCellType="ContentFoot" -->
-		<p style="margin-top: 0px; text-indent: 40px;"><i><font color="#0000FF" face="Consolas">Research Experience</font></i></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><i><font color="#0000FF" face="Consolas">Research Experience</font></i> <font face="Georgia, Times New Roman, Times, serif">(Project details on my <a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">CV</font></a>) </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">University of California, Berkeley </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2019/08 - present</font></p>
-		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Research Intern , advised by Prof Masayoshi Tomizuka.  </font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Research Intern on Autonomous Driving, advised by Prof Masayoshi Tomizuka.  </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Tsinghua University</font></p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2019/03 - 2019/06 </font></p>
-		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif"><a href="2019/Thesis.pdf"></a>Bachelor Thesis, advised by Prof Shi-Min Hu.</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Bachelor Thesis on Computational Geometry, advised by Prof Shi-Min Hu.</font></p>
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Graded: <font color="#0000c0">A(4.0/95+) </font></font></p>
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Tsinghua University, <a href="https://cg.cs.tsinghua.edu.cn/"><font color="#0000D0">CG Lab</font></a> </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2018/09 - 2019/03</font></p>
-		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Undergraduate Researcher, advised by Prof Shi-Min Hu. </font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Undergraduate Researcher on Dynamic-Scene SLAM, advised by Prof Shi-Min Hu. </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">The University of Texas at Austin</font></p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2018/04 - 2018/08</font></p>
-		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Research Intern, advised by Prof Qixing Huang and Prof Chandrajit Bajaj.</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Research Intern on Topological Reconstruction, advised by Prof Qixing Huang and Prof Chandrajit Bajaj.</font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Tsinghua University</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2017/03 - 2017/06</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Research Project on Computer Music, advised by Tan Lee.</font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Sogou Inc.</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2016/07</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Internship on Data Analysis. </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competition Attended </font></i>
 		<p align="left" style="text-indent: 40px">
