typo and structure

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Jiahui Huang, Sheng Yang, Zishuo Zhao, Yukun Lai, Shi-Min Hu. </font></p>
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Accepted for <font color="#0000C0">ICCV 2019. </font></font><font face="Georgia, Times New Roman, Times, serif"><a href="2019/5594.pdf"><font color="#8080FF">[Link] </font></a></font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Manuscripts In submission</font></i></p>
+	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Manuscripts in Submission</font></i></p>
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><em>Noise-Stable Rigid Graphs for Euclidean Embedding</em></font></p>
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Zishuo Zhao. </font></p>
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><a href="https://arxiv.org/abs/1907.06441"><font color="#8080FF">arXiv:1907.06441</font></a></font></p>
@@ -115,7 +115,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 <font face="Georgia, Times New Roman, Times, serif"><a href="https://ai.net9.org/games/dorado/articles"><font color="#0000D0">The 20th Artificial Inteligence Programming Contest</font></a> of Tsinghua University</font>, <font face="Georgia, Times New Roman, Times, serif">ranked in the  15th place </font></p>
 	  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2016/03 - 2016/05</font></p>
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
-		<td  valign="top" width="26%">
+		<td  valign="top" width="32%">
 		
 		
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
@@ -133,7 +133,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 		  <pre><font size="-2" face="Courier New, Courier, monospace">BD41 48A0 8CFE FC41 1679 E74A FC44 6B90 77EA EF00</font></pre>
 		  </div>
 		<p align="left" style="text-indent: 40px"><font size="-1" face="Georgia, Times New Roman, Times, serif">Additionally, for any critical document/information I may send you, you can ask me for a digital signature which can be checked by the public key before, for verification of authenticity.</font></p>
-		<p align="left" style="text-indent: 40px">&nbsp;</p></td>
+	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 </table>
 
