hobbies added: orienteering and sketching

--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Although I major in computer science, I will not be a geek and will put the innate affection for the world into my research career and everyday life. I enjoy diving into the depths of math and trying to render the digital canvas into a colorful world.</font></p>
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Through the way with pervasive challenges, I feel more than delighted for the time of growing up with friends and collegues, and will always cherish the innocent days we grow up day by day. In the  future, I will get stronger and encourage myself to pursue for a bright tomorrow with all hopes coming true.</font></p>
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Take the time and make it count. </font></p>
-		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><em><font color="#8080FF">Once more, on the ride of the azure skyline;</font></em></font></p>
 	  <p align="left" style="text-indent: 40px"><font color="#8080FF"><em><font face="Georgia, Times New Roman, Times, serif"> Once more, through the everlasting sunshine. </font></em></font></p>
-	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
+	  </td>
 		<td width="39%" valign="top">
 		<p style="text-indent: 40px">&nbsp;</p>
 		<p style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Education</font></i> <font face="Georgia, Times New Roman, Times, serif"><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a> </font></p>
@@ -45,7 +44,7 @@
 		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">GPA in last two years: <font color="#0000c0">3.69/4 </font></font></p>
 		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Major GPA: <font color="#0000C0">3.76/4</font></font></p>
 		<p align="center" style="text-indent: 0px">&nbsp;</p>
-	  <p align="center" style="text-indent: 0px">&nbsp;</p></td>
+		<p align="center" style="text-indent: 0px">&nbsp;</p></td>
 		<td width="30%" valign="top">
 		<!-- MSCellType="NavBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
@@ -53,8 +52,8 @@
 		<p align="left" style="text-indent: 40px">
   <font face="Georgia, Times New Roman, Times, serif">I am always interested to do research in 
 interdisciplinary fields of computer science, especially associated with mathematics. Now my research interest spans  the fields of<font color="#0000C0"> Computational Geometry/Topology, Computer Vision, Graphics, Robotics, Theoretical Machine Learning and Statistics. </font></font></p>
-	  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Additionally, I have amateur interests in <font color="#8080FF">Cryptography, Computer Music and Random Graph Theory</font>. Although I do not expect to do research in these areas, I feel them  very enchanting. I will be pleased if you would like to discuss about relevant topics with me. </font></p>
-	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
+	  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"> I also have amateur interests in <font color="#8080FF">Cryptography, Computer Music and Random Graph Theory</font>. Although I do not expect to do research in these areas, I feel them  very enchanting. I will be pleased if you would like to discuss about relevant topics with me. </font></p>
+	  </td>
 	</tr>
 	<tr>
 	  <td valign="top" width="35%"><p>&nbsp;</p>
@@ -77,7 +76,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><em>Noise-Stable Rigid Graphs for Euclidean Embedding</em></font></p>
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Zishuo Zhao. </font></p>
 	<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><a href="https://arxiv.org/abs/1907.06441"><font color="#8080FF">arXiv:1907.06441</font></a></font></p>
-	</td>
+	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
 		<td colspan="2" valign="top">
@@ -118,15 +117,11 @@ interdisciplinary fields of computer science, especially associated with mathema
 		<td  valign="top" width="30%">
 		
 		
+		<p align="left" style="text-indent: 40px"><font color="lavender" size="-1" face="Georgia, Times New Roman, Times, serif">My favorite c</font></p>
+		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Extracurricular Life </font></i></p>
+		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Beside math and computer sciences, I am also interested in music and visual arts since my childhood, and was good at writing essays &amp; poems during high school times. I still maintain <font color="#0000FF">Photography</font>, <font color="0000ff">Singing</font> and <font color="0000ff">Writing</font> as my main hobbies, and have developed new interests in <font color="8080ff">Orienteering</font> and <font color="8080ff">Sketching</font> during college years. </font></p>
+		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Under the well-known peer pressure in Tsinghua, I still believe the kaleidoscope of arts can bring inspirations to research, and enjoy the time spent with nice friends on the campus while gaining new aspects of life. </font></p>
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
-		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Hobbies in Life</font></i></p>
-		<p align="left" style="text-indent: 40px">&nbsp;</p>
-		<p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif">Programming</font></p>
-		<p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif">Photography</font></p>
-		<p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif">Writing</font></p>
-		<p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif">Singing</font></p>
-		<p align="left" style="text-indent: 40px"><font color="#8080FF" size="-1" face="Georgia, Times New Roman, Times, serif">(Due to limited space,  more non-acadamic works are generally not presented on my website. If you are interested in them, feel free to email me and I will share some to you ^_^ )</font></p>
-		<p align="left" style="text-indent: 40px"><font color="lavender" size="-1" face="Georgia, Times New Roman, Times, serif">My favorite computer games: League of Legends &amp; Celeste </font></p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Personal GPG Public Key(RSA-4096):</font></i></p>
 		<p align="left" style="text-indent: 40px"><font size="-1" face="Georgia, Times New Roman, Times, serif">I have a GPG keypair for secure communication, which  can be found <a href="http://keys.gnupg.net/pks/lookup?search=wiku30&fingerprint=on&op=index"><font color="#8080FF">here</font></a> on gnupg.net, with the fingerprint</font><font size="-1">:</font></p>
 		<div align="center">
