--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ interdisciplinary fields of computer science, especially associated with mathema
 	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Contacts</font></i></p>
 	    <p align="left" style="text-indent: 40px">&nbsp;</p>
 	    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">i [at] w.wiku30.xyz</font> <font face="Georgia, Times New Roman, Times, serif">(guaranteed valid through &gt;2023/10)</font></p>
-        <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">zzs15 [at] mails.tsinghua.edu.cn (expires in 2020/06) </font></p>
+        <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">zishuoz2 [at] illinois.edu (expires in 2025/06) </font></p>
         <p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif"><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font> <font face="Georgia, Times New Roman, Times, serif">(permanent)</font></p>
-        <p align="left" style="text-indent: 40px"><font color="#8080FF" face="Georgia, Times New Roman, Times, serif"><a href="https://www.facebook.com/zishuo.zhao.528"><font color="#8080FF">https://www.facebook.com/zishuo.zhao.528</font></a></font></p>
+        <p align="left" style="text-indent: 40px"><font color="#8080FF" face="Georgia, Times New Roman, Times, serif"><a href="https://www.facebook.com/zishuo.zhao.528"></a></font></p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
         <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">ORCID: <font color="#8080FF"><a href="https://orcid.org/0000-0003-4247-7272"><font color=#0000D0>0000-0003-4247-7272</font></a></font></font></p>      </td>
 	  <td colspan="2" valign="top">
@@ -85,7 +85,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 		<p style="margin-top: 0px; text-indent: 40px;"><i><font color="#0000FF" face="Consolas">Research Experience</font></i> <font face="Georgia, Times New Roman, Times, serif">(Project details on my <a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">CV</font></a>) </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">University of California, Berkeley </font></p>
-		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2019/08 - present</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2019/08 - 2020/01 </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Research Intern on Autonomous Driving, advised by Prof Masayoshi Tomizuka.  </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Tsinghua University</font></p>
