--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
 		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Yao Class, IIIS, Tsinghua University</font></p>
 		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2016/05 - 2020/06  </font></p>
 		<p style="text-indent: 40px">&nbsp;</p>
-		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Overall GPA: <font color="#0000C0">3.64/4</font> </font></p>
-		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">GPA in last two years: <font color="#0000c0">3.69/4 </font></font></p>
-		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Major GPA: <font color="#0000C0">3.76/4</font></font></p>
 		<p align="center" style="text-indent: 0px">&nbsp;</p>
 		<p align="center" style="text-indent: 0px">&nbsp;</p></td>
 		<td width="30%" valign="top">
@@ -59,7 +56,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 	  <td valign="top" width="35%"><p>&nbsp;</p>
 	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Contacts</font></i></p>
 	    <p align="left" style="text-indent: 40px">&nbsp;</p>
-	    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">i [at] w.wiku30.xyz</font> <font face="Georgia, Times New Roman, Times, serif">(guaranteed valid through &gt;2023/10)</font></p>
+	    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">wingedkuriboh [at] 126.com </font> <font face="Georgia, Times New Roman, Times, serif">(guaranteed valid through &gt;2023/10)</font></p>
         <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">zishuoz2 [at] illinois.edu (expires in 2025/06) </font></p>
         <p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif"><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font> <font face="Georgia, Times New Roman, Times, serif">(permanent)</font></p>
         <p align="left" style="text-indent: 40px"><font color="#8080FF" face="Georgia, Times New Roman, Times, serif"><a href="https://www.facebook.com/zishuo.zhao.528"></a></font></p>
@@ -83,6 +80,10 @@ interdisciplinary fields of computer science, especially associated with mathema
 <p align="left" style="text-indent: 40px">&nbsp;</p>
 		<!-- MSCellType="ContentFoot" -->
 		<p style="margin-top: 0px; text-indent: 40px;"><i><font color="#0000FF" face="Consolas">Research Experience</font></i> <font face="Georgia, Times New Roman, Times, serif">(Project details on my <a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">CV</font></a>) </font></p>
+		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">University of Illinois at Urbana-Champaign</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2020-03 - now</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Project on Gene Mapping, advised by Yuan Zhou.</font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">University of California, Berkeley </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2019/08 - 2020/01 </font></p>
@@ -133,7 +134,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2019-09-11</font></i></p>
+<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2020-09-04</font></i></p>
 
 </body>
 
