--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 	  <td valign="top" width="35%"><p>&nbsp;</p>
 	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Contacts</font></i></p>
 	    <p align="left" style="text-indent: 40px">&nbsp;</p>
-	    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">wingedkuriboh [at] 126.com </font> <font face="Georgia, Times New Roman, Times, serif">(guaranteed valid through &gt;2023/10)</font></p>
+	    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">zzs15 [at] tsinghua.org.cn (permanent) </font></p>
         <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">zishuoz2 [at] illinois.edu (expires in 2025/06) </font></p>
         <p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif"><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font> <font face="Georgia, Times New Roman, Times, serif">(permanent)</font></p>
         <p align="left" style="text-indent: 40px"><font color="#8080FF" face="Georgia, Times New Roman, Times, serif"><a href="https://www.facebook.com/zishuo.zhao.528"></a></font></p>
