--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
 		<p style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Education</font></i> <font face="Georgia, Times New Roman, Times, serif"><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a> </font></p>
 		<p style="text-indent: 40px">&nbsp;</p>
 		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Dept. Computer Science and Technology, Tsinghua University</font></p>
-		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2015/08 - 2016/05 </font></p>
+		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2015/08/19 - 2016/05/12 </font></p>
 		<p style="text-indent: 40px">&nbsp;</p>
 		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Yao Class, IIIS, Tsinghua University</font></p>
-		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2016/05 - 2020/06  </font></p>
+		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2016/05/12 - 2020/07/24  </font></p>
 		<p style="text-indent: 40px">&nbsp;</p>
-		<p align="center" style="text-indent: 0px">&nbsp;</p>
-		<p align="center" style="text-indent: 0px">&nbsp;</p></td>
+		<p style="text-indent: 40px"><font color="lavender" face="Georgia, Times New Roman, Times, serif">(Easter Egg: The day I left Tsinghua is the birthday of a girl I have a crush on. She is an amazing one totally beyond my sight, but I would appreciate her for lighting up my hard days!)</font></p>
+		</td>
 		<td width="30%" valign="top">
 		<!-- MSCellType="NavBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Research Interest</font></i></p>
 		<p align="left" style="text-indent: 40px">
   <font face="Georgia, Times New Roman, Times, serif">I am always interested to do research in 
-interdisciplinary fields of computer science, especially associated with mathematics. Now my research interest spans  the fields of<font color="#0000C0"> Computational Geometry/Topology, Computer Vision, Graphics, Robotics, Theoretical Machine Learning and Statistics. </font></font></p>
-	  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"> I also have amateur interests in <font color="#8080FF">Cryptography, Computer Music and Random Graph Theory</font>. Although I do not expect to do research in these areas, I feel them  very enchanting. I will be pleased if you would like to discuss about relevant topics with me. </font></p>
+interdisciplinary fields of computer science, especially associated with mathematics. Now my research interest spans  the fields of<font color="#0000C0"> Computational Geometry/Topology, Computer Graphics, Theoretical Machine Learning, Operations Research and Statistics. </font></font></p>
+	    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"> I also have amateur interests in <font color="#8080FF">Cryptography, Computer Music, Game Theory and Random Graph Theory</font>. Although I do not expect to do research in these areas, I feel very interested in them. I will be pleased if you would like to discuss about relevant topics with me. </font></p>
 	  </td>
 	</tr>
 	<tr>
@@ -57,7 +57,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Contacts</font></i></p>
 	    <p align="left" style="text-indent: 40px">&nbsp;</p>
 	    <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">zzs15 [at] tsinghua.org.cn (permanent) </font></p>
-        <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">zishuoz2 [at] illinois.edu (expires in 2025/06) </font></p>
+        <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">zishuoz2 [at] illinois.edu (expires in &gt;2025/06) </font></p>
         <p align="left" style="text-indent: 40px"> <font face="Georgia, Times New Roman, Times, serif"><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font> <font face="Georgia, Times New Roman, Times, serif">(permanent)</font></p>
         <p align="left" style="text-indent: 40px"><font color="#8080FF" face="Georgia, Times New Roman, Times, serif"><a href="https://www.facebook.com/zishuo.zhao.528"></a></font></p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
@@ -81,8 +81,12 @@ interdisciplinary fields of computer science, especially associated with mathema
 		<!-- MSCellType="ContentFoot" -->
 		<p style="margin-top: 0px; text-indent: 40px;"><i><font color="#0000FF" face="Consolas">Research Experience</font></i> <font face="Georgia, Times New Roman, Times, serif">(Project details on my <a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">CV</font></a>) </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
+		<p style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Haihua Institute for Frontier Information Technology <a href="http://www.haihua.org.cn/">[Link]</a> </font></p>
+		<p style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">2020/08 - now</font></p>
+		<p style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Research Assistant on Quantum Communication, advised by Longbo Huang </font></p>
+		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">University of Illinois at Urbana-Champaign</font></p>
-		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2020-03 - now</font></p>
+		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2020/03 - now</font></p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Project on Gene Mapping, advised by Yuan Zhou.</font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">University of California, Berkeley </font></p>
@@ -110,9 +114,15 @@ interdisciplinary fields of computer science, especially associated with mathema
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">2016/07</font></p>
 		<p style="margin-top: 0px; text-indent: 40px;"><font face="Georgia, Times New Roman, Times, serif">Internship on Data Analysis. </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
-		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competition Attended </font></i>
+		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
+		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competitions Attended</font></i>
+		  <p align="left" style="text-indent: 40px">
+	      
+		  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif"><font color="#0000D0">The 24th Artificial Inteligence Programming Contest</font> of Tsinghua University</font>, <font face="Georgia, Times New Roman, Times, serif">12th place </font>
+		
+		<p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2020/03 - 2020/05</font></p>
 		<p align="left" style="text-indent: 40px">
-<font face="Georgia, Times New Roman, Times, serif"><a href="https://ai.net9.org/games/dorado/articles"><font color="#0000D0">The 20th Artificial Inteligence Programming Contest</font></a> of Tsinghua University</font>, <font face="Georgia, Times New Roman, Times, serif">ranked in the  15th place </font></p>
+<font face="Georgia, Times New Roman, Times, serif"><a href="https://ai.net9.org/games/dorado/articles"><font color="#0000D0">The 20th Artificial Inteligence Programming Contest</font></a> of Tsinghua University</font>, <font face="Georgia, Times New Roman, Times, serif">15th place </font></p>
 	  <p align="left" style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2016/03 - 2016/05</font></p>
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 		<td  valign="top" width="30%">
@@ -134,7 +144,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2020-09-04</font></i></p>
+<p align="right"><i><font color="#7070C0" face="Georgia, Times New Roman, Times, serif">Last updated on 2020-09-15</font></i></p>
 
 </body>
 
