--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ interdisciplinary fields of computer science, especially associated with mathema
 		<!-- MSCellType="ContentFoot" -->
 		<p style="margin-top: 0px; text-indent: 40px;"><i><font color="#0000FF" face="Consolas">Research Experience</font></i> <font face="Georgia, Times New Roman, Times, serif">(Project details on my <a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">CV</font></a>) </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
-		<p style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Haihua Institute for Frontier Information Technology <a href="http://www.haihua.org.cn/">[Link]</a> </font></p>
+		<p style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Haihua Institute for Frontier Information Technology <a href="http://www.haihua.org.cn/"><font color="8080FF">[Link]</font></a> </font></p>
 		<p style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">2020/08 - now</font></p>
 		<p style="text-indent: 40px"><font color="#000000" face="Georgia, Times New Roman, Times, serif">Research Assistant on Quantum Communication, advised by Longbo Huang </font></p>
 		<p style="margin-top: 0px; text-indent: 40px;">&nbsp;</p>
