--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">Yao Class, IIIS, Tsinghua University</font></p>
 		<p style="text-indent: 40px"><font face="Georgia, Times New Roman, Times, serif">2016/05/12 - 2020/07/24  </font></p>
 		<p style="text-indent: 40px">&nbsp;</p>
-		<p style="text-indent: 40px"><font color="lavender" face="Georgia, Times New Roman, Times, serif">(Easter Egg: The day I left Tsinghua is the birthday of a girl I have a crush on. She is an amazing one totally beyond my sight, but I would appreciate her for lighting up my hard days!)</font></p>
+		<!-- <p style="text-indent: 40px"><font color="lavender" face="Georgia, Times New Roman, Times, serif">(Easter Egg: The day I left Tsinghua is the birthday of a girl I have a crush on. She is an amazing one totally beyond my sight, but I would appreciate her for lighting up my hard days!)</font></p> -->
 	  </td>
 		<td width="31%" valign="top">
 		<!-- MSCellType="NavBody" -->
